force-app/main/default/objects/Step_Template__c/Step_Template__c.object-meta.xml
<CustomObject>
    <label>Step Template</label>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Step Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>