force-app/main/default/objects/Step_Template__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <label>Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a0uDQ00000057NRYAY</fullName>
                <label>Patient Health Questionnaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>