force-app/main/default/objects/Step_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Step Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>