force-app/main/default/objects/Step_Template__c/fields/Goal_Template__c.field-meta.xml
<CustomField>
    <fullName>Goal_Template__c</fullName>
    <label>Goal Template</label>
    <referenceTo>Goal_Template__c</referenceTo>
    <relationshipLabel>Step Templates</relationshipLabel>
    <relationshipName>Step_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>