force-app/main/default/objects/Step_Template__c/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Type of Step</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actionable Task</fullName>
            </value>
            <value>
                <fullName>Step</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>